--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,13 @@
         </dependency>
 
         <!-- MapStruct -->
+        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.5.Final</version>
+            <version>1.6.3</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -109,11 +111,13 @@
         </dependency>
 
         <!-- Jackson Databind -->
+        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.0</version>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.6.3</version>
         </dependency>
+
 
         <!-- Testing -->
         <dependency>
