--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,17 @@ spring.datasource.password=huycong123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
-feign.client.config.default.loggerLevel = full
+logging.level.org.springframework.cloud.openfeign=DEBUG
+logging.level.feign.Logger=DEBUG
+spring.main.allow-bean-definition-overriding=true
+spring.messages.basename=messages
+
+spring.messages.fallback-to-system-locale=false
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+spring.messages.encoding=UTF-8
+logging.level.liquibase=DEBUG
